# WherEval

./: LICENSE  README.md  changelog  pyproject.toml  util.py  whereval.py
examples/: examples.py
src/whereval/: __init__.py  util.py  whereval.py
test/: hand_tests.py  test_whereval.py
testing/: whereval_tests.py
tests/: hand_tests.py  test_whereval.py
whereval/: util.py  whereval.py
