[tool.poetry]
name = "whereval"
version = "0.0.2"
description = "Tool for parsing SQL like where expressions and evaluating against live data "
license = "BSD-3-Clause"
authors = ["Timothy C. Quinn"]
readme = "README.md"
homepage = "https://pypi.org/project/whereval"
repository = "https://github.com/JavaScriptDude/WherEval"
classifiers = [
    'Development Status :: 4 - Beta',
    'Environment :: Console',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: BSD License',
    'Operating System :: POSIX :: Linux',
    'Operating System :: POSIX :: BSD',
    'Operating System :: POSIX :: SunOS/Solaris',
    'Operating System :: MacOS :: MacOS X',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Topic :: Software Development',
]
packages = [{ include = "whereval" }]

[tool.poetry.dependencies]
python = ">= 3.7.1"
