[tool.poetry]
name = "whereval"
version = "0.1.8"
description = "Tool for parsing SQL like where expressions and evaluating against live data "
license = "MIT"
authors = ["Timothy C. Quinn"]
readme = "README.md"
homepage = "https://pypi.org/project/whereval"
repository = "https://github.com/JavaScriptDude/WherEval"
classifiers = [
    'Development Status :: 4 - Beta',
    'Environment :: Console',
    'Intended Audience :: Developers',
    'Operating System :: POSIX :: Linux',
    'Operating System :: POSIX :: BSD',
    'Operating System :: POSIX :: SunOS/Solaris',
    'Operating System :: MacOS :: MacOS X',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Topic :: Software Development',
]

[tool.poetry.dependencies]
python = "^3.7.9"
sqlparse = "^0.4.2"
numpy = "^1.21.2"
texttable = "^1.6.4"


[tool.poetry.dev-dependencies]
unittest2 = "^1.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"